fix double scroll bar on nearly all views and improve setupView scroll for small screens

--- a/assets/less/base/body.less
+++ b/assets/less/base/body.less
@@ -20,13 +20,15 @@ body {
 	}
 
 	&:not(.startView) {
-		padding-top: 65px;
+		#container {
+			padding-top: 15px;
+		}
 		footer {
 			background: rgba(255,255,255,0.79);
 		}
 	}
-	&:not(.mainView, .startView) {
-		#main {
+	&.setupView {
+		#container {
 			overflow-y: scroll;
 		}
 	}
